--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Gráficos do Bolsa Família</h3>
 
+<p>Por enquanto temos 2 gráficos criados:
+
+  O primeiro mostra o bolsa família por estado e o número de beneficiário por meses: <a href="meses.html">gráfico meses</a>
+
+  O segunda mostra o bolsa família por cidades <a href="cidades.html">gráfico cidades</a>
+</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Autor</h3>
