--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Gráficos do Bolsa Família</h3>
 
 <p>Por enquanto temos 2 gráficos criados:
-
+  <ul>
+    <li>
   O primeiro mostra o bolsa família por estado e o número de beneficiário por meses: <a href="meses.html">gráfico meses</a>
-
-  O segunda mostra o bolsa família por cidades <a href="cidades.html">gráfico cidades</a>
+</li>
+<li>
+  O segunda mostra o bolsa família por cidades <a href="cidades.html">gráfico cidades</a></li></ul>
 </p>
 
 <h3>
