--- a/index.html
+++ b/index.html
@@ -31,24 +31,21 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Gráficos do Bolsa Família</h3>
 
-<p>Por enquanto temos 2 gráficos criados:
+<p>Por enquanto existem dois gráficos:
   <ul>
     <li>
-  O primeiro mostra o bolsa família por estado e o número de beneficiário por meses: <a href="meses.html">gráfico meses</a>
-</li>
-<li>
-  O segunda mostra o bolsa família por cidades <a href="cidades.html">gráfico cidades</a></li></ul>
+      O primeiro mostra o bolsa família por estado e o número de beneficiário por meses: <a href="meses.html">gráfico de meses</a>
+    </li>
+    <li>
+      O segunda mostra o bolsa família por cidades <a href="cidades.html">gráfico de cidades</a>
+    </li>
+  </ul>
 </p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Autor</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Meu nome é Diógenes e sou desenvolvedor de software na <a href="www.crowdspring.com">crowdSPRING</a>. Você pode entrar em contato pelo <a href="http://twitter.com">diofeher</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/diofeher">diofeher</a></p>
