--- a/index.html
+++ b/index.html
@@ -16,28 +16,31 @@
     <div class="wrapper">
       <header>
         <h1>Government-data</h1>
-        <p>Repository used to create graphs about open government data</p>
+        <p>Repositório usado para interpretar dados do governo</p>
 
-        <p class="view"><a href="https://github.com/diofeher/government-data">View the Project on GitHub <small>diofeher/government-data</small></a></p>
+        <p class="view"><a href="https://github.com/diofeher/government-data">Veja o projeto no GitHub <small>diofeher/government-data</small></a></p>
 
 
         <ul>
           <li><a href="https://github.com/diofeher/government-data/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/diofeher/government-data/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/diofeher/government-data">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/diofeher/government-data">Veja no <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Gráficos do Bolsa Família</h3>
 
-<p>Por enquanto existem dois gráficos:
+<p>Gráficos existentes:
   <ul>
     <li>
-      O primeiro mostra o bolsa família por estado e o número de beneficiário por meses: <a href="meses.html">gráfico de meses</a>
+      <a href="bolsafamilia/months.html">Total de beneficiários em 2013</a>
     </li>
     <li>
-      O segunda mostra o bolsa família por cidades <a href="cidades.html">gráfico de cidades</a>
+      <a href="bolsafamilia/cities.html">Gráfico por cidades</a>
+    </li>
+    <li>
+      <a href="bolsafamilia/percentage.html">Porcentagem de beneficiários de acordo com a população</a>
     </li>
   </ul>
 </p>
