--- a/bolsafamilia/cities.html
+++ b/bolsafamilia/cities.html
@@ -95,5 +95,11 @@ $('#container').highcharts({
 <body>
     <div id="container" style="min-width: 310px; height:4000px; margin: 0 auto">
     </div>
+    <div>
+    	<h2>Fontes</h2>
+		<p><a href="http://www.ibge.gov.br/estadosat/">Censo da população 2013 (estimado)</a></p>
+
+		<p><a href="http://www.portaltransparencia.gov.br/downloads/view.asp?c=BolsaFamiliaFolhaPagamento">Dados do Bolsa Família</a></p>
+	</div>
 </body>
 </html>
