--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Autor</h3>
 
-<p>Meu nome é Diógenes e sou desenvolvedor de software na <a href="www.crowdspring.com">crowdSPRING</a>. Você pode entrar em contato pelo <a href="http://twitter.com/diofeher">twitter</a>.</p>
+<p>Meu nome é Diógenes e sou desenvolvedor de software na <a href="http://www.crowdspring.com">crowdSPRING</a>. Você pode entrar em contato pelo <a href="http://twitter.com/diofeher">twitter</a> ou <a href="mailto:contact@diofeher.net">e-mail</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/diofeher">diofeher</a></p>
